add calculator pages and logic calculator

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <section class="cta-section">
         <h2>Siap Mengetahui Jejak Karbonmu?</h2>
         <p>Cari tahu berapa banyak emisi yang Anda hasilkan sehari-hari dan dapatkan tips untuk menguranginya.</p>
-        <a href="kalkulator.html" class="btn-white">Buka Kalkulator Karbon ➔</a>
+        <a href="http://localhost:8000/kalkulator.html" class="btn-white">Buka Kalkulator Karbon ➔</a>
     </section>
 
     <footer>
