--- a/kalkulator.html
+++ b/kalkulator.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kalkulator Karbon Gedung - JejakKarbonKu</title>
+    <title>Kalkulator Karbon Gedung - JejakKarbon</title>
     
     <!-- CSS -->
     <link rel="stylesheet" href="css/styles.css">
@@ -15,8 +15,8 @@
     
     <nav class="navbar">
         <a href="index.html" class="logo">
-            <img src="assets/logo.png" alt="Logo JejakKarbon" class="logo-img" style="width: 60px; height: auto;">
-            <span>JejakKarbonKu</span>
+            <img src="img/logo.png" alt="Logo JejakKarbon" class="logo-img">
+            <span>JejakKarbon</span>
         </a>
         <ul class="nav-menu">
             <li><a href="index.html#home">Home</a></li>
@@ -47,7 +47,7 @@
             <!-- CARD 1: INFORMASI GEDUNG -->
             <div class="card">
                 <h2>
-                    <div> <img src="assets/building.png" alt="Ilustrasi Gedung" style="width: 60px; height: auto;"></div>
+                    <div class="icon-circle">🏢</div>
                     Informasi Gedung
                 </h2>
                 <div class="info-box">
@@ -55,7 +55,7 @@
                 </div>
                 <div class="form-group">
                     <label>Nama Gedung</label>
-                    <input type="text" id="namaGedung" placeholder="Contoh: Gedung Fakultas Mipa">
+                    <input type="text" id="namaGedung" placeholder="Contoh: Gedung Fakultas Teknik">
                 </div>
                 <div class="form-group">
                     <label>Luas Gedung (m²)</label>
@@ -66,7 +66,6 @@
             <!-- CARD 2: TAMBAH PERALATAN -->
             <div class="card">
                 <h2>
-                    <div> <img src="assets/device.png" alt="Ilustrasi Gedung" style="width: 60px; height: auto;"></div>
                     Tambah Peralatan Elektronik
                 </h2>
                 <div class="info-box">
